<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.reminder.fragment.UpdateReminderFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="36dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <TextView
        android:id="@+id/reminder_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_top_margin"
        android:text="@string/set_a_reminder"
        android:textColor="?attr/pageTitleColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@id/reminder_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/reminder_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/add_name"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/reminder_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/select_time"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/frequency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/set_reminder_frequency"
        android:textColor="?attr/normalTextColor"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/time_layout" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/frequency_chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:chipSpacingHorizontal="64dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/frequency_tv"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/daily"
            android:textColor="@color/very_dark_grey_3"
            app:chipStrokeColor="@color/very_dark_grey_3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/custom"
            android:textColor="@color/very_dark_grey_3"
            app:chipStrokeColor="@color/very_dark_grey_3" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/frequency_day_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:chipSpacingHorizontal="64dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/frequency_chip_group"
        app:selectionRequired="false"
        app:singleSelection="false"
        tools:visibility="visible">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/monday"
            android:textColor="@color/moderate_green_2"
            app:chipStrokeColor="@color/moderate_green_2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/tuesday"
            android:textColor="@color/bright_red_2"
            app:chipStrokeColor="@color/bright_red_2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/wednesday"
            android:textColor="@color/soft_blue"
            app:chipStrokeColor="@color/soft_blue" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/thursday"
            android:textColor="@color/very_soft_red_2"
            app:chipStrokeColor="@color/very_soft_red_2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/friday"
            android:textColor="@color/dark_red"
            app:chipStrokeColor="@color/dark_red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/saturday"
            android:textColor="@color/moderate_violet"
            app:chipStrokeColor="@color/moderate_violet" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="126dp"
            android:text="@string/sunday"
            android:textColor="@color/vivid_yellow_2"
            app:chipStrokeColor="@color/vivid_yellow_2" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/delete_btn"
        style="@style/Widget.Jeeva.Button.Negative"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/delete"
        android:textColor="?normalTextColor"
        app:layout_constraintBaseline_toBaselineOf="@id/save_btn"
        app:layout_constraintStart_toStartOf="@id/start_guideline" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/delete_btn"
        app:layout_constraintTop_toBottomOf="@id/frequency_day_group"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>